# neuralforge

./: CMakeLists.txt  README.md
benchmarks/: performance_benchmark.cpp
examples/: CMakeLists.txt  mnist_classification.cpp  simple_demo.cpp
include/neuralforge/: neuralforge.hpp  nn.hpp  tensor.hpp
